# awtk-ios

./: .gitignore  README.md  create_project.py  utils.py
ios-project/: CMakeLists.txt  awtk_assets.mk  awtk_frameworks.mk  awtk_properties.mk  awtk_source.mk  generate-project.sh  ios.cmake  plist.in
ios-project/awtk-port/: awtk_config.h
ios-project/src/awtk-port/: awtk_config.h  awtk_ios.h  awtk_ios.m
ios-project/tools/: frameworks  gen_frameworks.sh
